BUG#30221 "log_tables.test fails on Windows" The problem was that dsmrr_close() was not called for LIMIT queries that didn't finish the DS-MRR scan. This failure to deinitialize the scan caused leaks of file descriptors in MyISAM.

Fix: Call ds_mrr.dsmrr_close() in handler->reset().