storage/myisam/ha_myisam.cc
@@ -1840,6 +1840,7 @@ int ha_myisam::reset(void)
   pushed_idx_cond= NULL;
   pushed_idx_cond_keyno= MAX_KEY;
   mi_set_index_cond_func(file, NULL, 0);
+  ds_mrr.dsmrr_close();
   return mi_reset(file);
 }
 
